--- a/theme/css/main.css
+++ b/theme/css/main.css
@@ -72,6 +72,8 @@ h1 a:hover, h1 a:active {
 
 #banner nav li {float: left; display: inline; margin: 0px 2.0em 0px 0px; line-height:2.0em; padding: 0}
 
+#feedfooter li {float: left; display: inline; margin: 0px 2.0em 0px 0px; line-height:2.0em; padding: 0}
+
 #content {
 	background: #ffffff;
 	border: 1px solid #F0F0F0;
